<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/header_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/ic_add_shopping_cart_white_24dp" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_to_cart"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_to_cart_message"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/circular_button_bg_grey"
            android:text="@string/cancel"
            android:ellipsize="end"
            android:lines="1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_ok"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/circular_button_bg_theme"
            android:text="@string/ok"
            android:ellipsize="end"
            android:lines="1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>