<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_title"
        android:padding="15dp"
        android:textSize="20sp"
        android:gravity="center"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_price"
        android:padding="15dp"
        android:textSize="14sp"
        android:gravity="start"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/selected_price_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/price_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/min_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="0" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/max_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="1000" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/circular_button_bg_grey"
            android:text="@string/reset"
            android:ellipsize="end"
            android:lines="1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/apply_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/circular_button_bg_theme"
            android:text="@string/apply"
            android:ellipsize="end"
            android:lines="1"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>